--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>San Joaquin Valley Town Hall</title>
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
   <header>
@@ -37,17 +38,17 @@
     <h3>October<br>
       <a href="speakers/brancaccio.html">David Brancaccio</a>
     </h3>
-    <img src="images/brancaccio.jpg" alt="David Brancaccio" height="150">
+    <img src="images/brancaccio75.jpg" alt="David Brancaccio" height="150">
 
     <h3>November<br>
       <a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
     </h3>
-    <img src="images/sorkin.jpg" alt="Andrew Ross Sorkin" height="150">
+    <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin" height="150">
 
     <h3>December<br>
       <a href="speakers/chua.html">Amy Chua</a>
     </h3>
-    <img src="images/chua.jpg" alt="Amy Chua" height="150">
+    <img src="images/chua75.jpg" alt="Amy Chua" height="150">
   </main>
 
   <footer>
@@ -55,4 +56,6 @@
   </footer>
 </body>
 </html>
+
+
 
